# connect

./: .gitignore  AGENTS.md  README.md  Taskfile.yaml  connect  e2e_interaction_test.go  e2e_test.go  flake.nix  go.mod  go.sum  main.go
.github/workflows/: release.yml  testing.yml
connect-lib/: Cargo.toml
connect-lib/lib/: Cargo.toml
connect-lib/lib/src/: config.rs  datum_cloud_client.rs  heartbeat.rs  http_user_agent.rs  lib.rs  node.rs  project_control_plane.rs  repo.rs  state.rs  tunnels.rs
connect-lib/lib/src/datum_apis/: connector.rs  connector_class.rs  http_proxy.rs  mod.rs  traffic_protection_policy.rs
connect-lib/lib/src/datum_cloud/: env.rs  external_token_source.rs  mod.rs
connect-plugin/: .goreleaser.yaml  e2e_interaction_test.go  e2e_test.go  fake-datum-connect-test  go.mod  main.go
connect-plugin/internal/binary/: discovery.go
connect-plugin/internal/daemon/: fake-datum-connect  fork.go  supervisor_test.go
connect-plugin/internal/exec/: run.go  run_test.go
connect-plugin/internal/logfile/: logfile.go
connect-plugin/internal/output/: convert.go
connect-plugin/internal/pidfile/: pidfile.go  pidfile_test.go
connect-plugin/internal/rbaccheck/: check.go
connect-plugin/internal/signals/: forward.go
connect-plugin/internal/state/: state.go
connect-plugin/internal/svcconfig/: config.go
connect-plugin/scripts/: build.sh
connect-plugin/tunnel/: root.go
internal/binary/: discovery.go
internal/daemon/: fork.go  supervisor.go
internal/env/: build.go  build_test.go
internal/exec/: run.go  run_test.go
internal/output/: convert.go
internal/pidfile/: pidfile.go  process.go  process_test.go
internal/signals/: forward.go
internal/state/: state.go  state_test.go
internal/svcconfig/: config.go  config_test.go
internal/svcunit/: unit.go  unit_test.go
scripts/: build.sh  release.sh
testdata/fake-credentials-helper/: main.go
testdata/fake-datum-connect/: main.go
tunnel/delete/: main.go
tunnel/install/: main.go
tunnel/list/: main.go
tunnel/listen/: main.go
tunnel/logs/: main.go
tunnel/ps/: main.go
tunnel/run/: main.go
tunnel/start/: main.go
tunnel/status/: main.go
tunnel/stop/: main.go
tunnel/uninstall/: main.go
tunnel/update/: main.go
(+10 files in other folders)
