[workspace]
members = ["lib", "bin"]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
arc-swap = "1.8.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
derive_more = { version = "2.1.1", features = ["display"] }
gethostname = "1.1.0"
hex = "0.4.3"
http = "1"
k8s-openapi = { version = "0.26.1", features = ["v1_30"] }
kube = { version = "2.0.1", default-features = false, features = ["client", "derive", "rustls-tls"] }
n0-error = { version = "0.1", features = ["anyhow"] }
n0-future = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
secrecy = "0.10.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
thiserror = "2"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
url = "2"
