[package]
name = "connect-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
gethostname = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
n0-error = { workspace = true }
n0-future = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# iroh dependencies
iroh = { version = "0.95", default-features = false }
iroh-base = { version = "0.95" }
iroh-relay = { version = "0.95" }
iroh-tickets = "0.2"
iroh-n0des = { version = "0.8" }
iroh-proxy-utils = { git = "https://github.com/n0-computer/iroh-proxy-utils", rev = "38ef14f7bc215348d47987563bb1b5198cc91f40" }

# postcard for ticket serialization
postcard = "1"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
